namespace Escenario02
{
    public interface INotificationAlert
    {
        void SendAlert(string alertMessage);
    }
}