namespace Escenario02
{
    public interface INotificationConfirmation
    {
        void SendConfirmation(string confirmationMessage);
    }
}