namespace Escenario02
{
    public interface INotificationMessage
    {
        public void SendMessage(string message);
    }
}