namespace Escenario02
{
    public interface INotificationWarning
    {
        void SendWarning(string warningMessage);
    }
}